Change URL for c4x port according to Michael Hayes <m.hayes@elec.canterbury.ac.nz>.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -31,7 +31,7 @@ optimization</a> support.
 
 <dt><b>September 18, 1998</b></dt>
 <dd>
-  Michael Hayes donates <a href="/cgi-bin/cvsweb/gcc/README.C4X?rev=1.1">
+  Michael Hayes donates <a href="http://www.elec.canterbury.ac.nz/c4x/">
   <b>c4x port.</b></a>
 </dd>
 
@@ -144,7 +144,7 @@ framework</b></a>.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on December 23, 1998.</i>
+<i>Last modified on January 13, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
