Fix broken link.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -55,7 +55,7 @@ comp.std.c++ FAQ</a>.
     <li><a href="#linuxkernel">Problems building Linux kernels</a>  
     <li><a href="#windows">EGCS with Windows</a>  
     <li><a href="#os2">EGCS with OS/2</a>
-    <li><a href="X11R6">How do I compile X11 headers with g++</a>  
+    <li><a href="#X11R6">How do I compile X11 headers with g++</a>  
     <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
     <li><a href="#axparch">Assembler errors on Alpha targets</a>
     <li><a href="#sig11">Signal 11 on Linux</a>
