Fix broken link.

--- a/htdocs/egcs-1.0/buildstat.html
+++ b/htdocs/egcs-1.0/buildstat.html
@@ -63,7 +63,7 @@ failures, probably due to old binutils too.
 
 <p><b>i?86-pc-solaris*</b><br>
 You'll need a patch to fix an egcs bug on this platform.
-<a href="http://www-egcs.cygnus.com/faq.html#x86solaris"> x86 solaris patch</a>
+<a href="http://egcs.cygnus.com/faq.html#x86solaris"> x86 solaris patch</a>
 
 
 <p><b>i386-pc-bsdi3.0</b><br>
