Note hypersparc and sparclite86x contribution.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,6 +38,12 @@ href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 
 <dl>
 
+<dt><b>January 14, 1999</b></dt>
+<dd>
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for Hypersparc
+(SS20) and Sparclite86x (embedded) processors.
+</dd>
+
 <dt><b>December 7, 1998</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
@@ -119,7 +125,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on December 31, 1998.</i>
+<i>Last modified on January 15, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
