--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,6 +38,11 @@ href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 
 <dl>
 
+<dt><b>January 18, 1999</b></dt>
+<dd> Christian Bruel and Jeff Law donate improved 
+<a href="dse.html">local dead store elimination.</a>
+</dd>
+
 <dt><b>January 14, 1999</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for Hypersparc
