HTMLify and Move contents of gcc/LITERATURE here. By Rich Churcher <rich.c@es.co.nz>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -1,21 +1,97 @@
 <html>
 <head>
 <title>egcs ftp mirror sites</title>
+<meta name="title" content="egcs ftp mirror sites">
+<meta name="keywords" content="egcs, compilers, optimization, documentation, FAQ, standards">
 </head>
 
 <body>
 <h1 align="center">egcs: Links and Selected Readings</h1>
 
+Collected papers/sites on standards, compilers, optimization, etc.
+<ul>
+<li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">
+		Porting GCC for Dummies</a> by Hans-Peter Nilsson 
+		&lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
+<li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively Scalar Compiler Project</a>
+<li>David M Keaton's site: <a href="http://www.dmk.com">http</a> or <a href="ftp://ftp.dmk.com">ftp</a>.
+c9x stuff is in <a href="ftp://ftp.dmk.com/DMK/sc22wg14/c9x">ftp://ftp.dmk.com/DMK/sc22wg14/c9x</a>
+
 <p>
-<a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
-Dummies</a> by Hans-Peter Nilsson &lt;hans-peter.nilsson@axis.com&gt;.
+<li><a href="http://www.partner.europe.digital.com/www-swdev/pages/Home/TECH/dunix/ofst/build/src/index.html">
+		Information on the Digital UNIX V5.0 object file format</a>
+<li><a href="http://www.hp.com/computing/framed/technology/micropro">HPPA information</a>
+<li><a href="http://www.mot.com/SPS/HPESD/prod/0X0">Various m68k info (including user guides in pdf format)</a>
+<li><a href="http://developer.intel.com/design/litcentr/index.htm">Intel Pentium design info</a>
+<li>Some information about optimizing for x86 processors, links to x86 manuals and documentation:
+<ul>
+	<li><a href="http://www.goof.com/pcg/docs.html">http://www.goof.com/pcg/docs.html</a>
+	<li><a href="http://www.agner.org">http://www.agner.org</a>
+</ul>
+<li><a href="http://www.amd.com/K6/k6docs/pdf/21828a.pdf">AMD site with optimization guide for x86</a>
+<li>Various MIPS stuff:
+	<ul>
+		<li><a href="http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf">
+				http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf</a>
+		<li><a href="http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf">
+				http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf</a>
+		<li><a href="http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf">
+				http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf</a>
+		<li><a href="http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf">
+				http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf</a>
+		<li><a href="http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf">
+				http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf</a>
+		<li><a href="http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf">
+				http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf</a>
+	</ul>
+	
+<p>
+<li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a>
+<li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a>
+<li><a href="http://www.dkuug.dk/JTC1/SC22/WG14/www/docs/n794.htm">C9X draft</a>
+<li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
+
+
+<p>
+<li>Modula 3 Stuff:
+	<ul>
+		<li><a href="http://www.cmass.com">http://www.cmass.com</a>
+		<li><a href="http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html">
+				http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html</a>
+		<li><a href="ftp://ftp.freebsd.org/pub/FreeBSD/distfiles/LOCAL_PORTS/m3-fbsd-m3cc-3.6.tar.gz">
+				ftp://ftp.freebsd.org/pub/FreeBSD/distfiles/LOCAL_PORTS/m3-fbsd-m3cc-3.6.tar.gz</a>
+		<li><a href="http://www.m3.org">http://www.m3.org</a>
+	</ul>
+
+
+<p>
+<li>EG3 maintains a list of compiler Internet resources, including FAQ's,
+papers, hot list pages, potential software/shareware, all known companies, etc.:
+	<ul>
+		<li><a href="http://www.eg3.com/ulc/compulc.htm">http://www.eg3.com/ulc/compulc.htm</a>
+		<li><a href="http://www.eg3.com/softd/compiler.htm">http://www.eg3.com/softd/compiler.htm</a>
+		<li><a href="http://www.eg3.com/softdv/compiler.htm">http://www.eg3.com/softdv/compiler.htm</a>
+		<li>These resource pages are published as part of EG3's Free Electronic Engineers' Toolbox at:
+			<ul><li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a></ul>
+	</ul>
+
+<p>
+<li><a href="http://hypatia.dcs.qmw.ac.uk/SEL-HPC/Articles/CompilersArchive.html">
+		Searchable article archive</a>
+<li><a href="http://www.nullstone.com/htmls/connections.htm">Links related to many compiler topics</a>
+<li><a href="http://www.iecc.com/compilers">Comp.compilers archive</a>
+<li><a href="http://reality.sgi.com/employees/austern_mti/std-c++/faq.html">comp.std.c++ FAQ</a>
+<li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">
+		New compiler book</a>.  Online appendix includes some compiler links.
+</ul>
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on January 15, 1999.</i>
+<i>Last modified on January 19, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
+
 </body>
 </html>
