--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -13,9 +13,15 @@
 <ul>
 
   <li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
-      Dummies</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
+  Dummies</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
 
-  <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively Scalar Compiler Project</a>
+  <li><a href="http://www.validgh.com/goldberg/paper.ps">What Every
+  Computer Scientist Should Know about Floating-Point Arithmetic</a>
+  by David Goldberg, including Doug Priest's supplement (PostScript
+  format)
+
+  <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
+  Scalar Compiler Project</a>
 
   <li>David M Keaton's site: <a href="http://www.dmk.com">http</a> or
   <a href="ftp://ftp.dmk.com">ftp</a>. c9x stuff is in
@@ -71,11 +77,8 @@
   <li>Modula 3 Stuff:
   <ul>
     <li><a href="http://www.cmass.com">http://www.cmass.com</a>
-
     <li><a href="http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html">http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html</a>
-
     <li><a href="ftp://ftp.freebsd.org/pub/FreeBSD/distfiles/LOCAL_PORTS/m3-fbsd-m3cc-3.6.tar.gz">ftp://ftp.freebsd.org/pub/FreeBSD/distfiles/LOCAL_PORTS/m3-fbsd-m3cc-3.6.tar.gz</a>
-
     <li><a href="http://www.m3.org">http://www.m3.org</a>
   </ul>
 
@@ -85,11 +88,8 @@
 papers, hot list pages, potential software/shareware, all known companies, etc.:
   <ul>
     <li><a href="http://www.eg3.com/ulc/compulc.htm">http://www.eg3.com/ulc/compulc.htm</a>
-
     <li><a href="http://www.eg3.com/softd/compiler.htm">http://www.eg3.com/softd/compiler.htm</a>
-
     <li><a href="http://www.eg3.com/softdv/compiler.htm">http://www.eg3.com/softdv/compiler.htm</a>
-
     <li>These resource pages are published as part of EG3's Free Electronic Engineers' Toolbox at:
     <ul>
       <li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a></ul>
@@ -108,7 +108,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
   <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">New compiler book</a>.  Online appendix includes some compiler links.
 
 </ul>
-
+ 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
 
