--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -240,8 +240,10 @@ manual can be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if the GNU
 Or see the file <a href="/cgi-bin/cvsweb/gcc/BUGS?rev=1.1">BUGS</a> included
 with the egcs source code.
 
-<p>Before you report a bug for the C++ compiler, you might check the
-<a href="c++bugs.html">list of well-known bugs</a>.
+<p>Before you report a bug for the <em>C++ compiler</em>, please check
+the <a href="c++bugs.html">list of well-known C++ bugs</a>. If you
+want to report a bug with <em>egcs 1.0.x</em>, we recommend upgrading
+to the current release first.
 
 <p>In short, if egcs says <tt>Internal compiler error</tt> (or any
 other error that you'd like us to be able to reproduce, for that
@@ -613,13 +615,13 @@ also work in 2.0.32.
 cygwin32 dll.  However Mumit Khan has been working on supporting Windows
 with EGCS.  You should check out his site if you're interested in Windows
 support.
-<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32">GNU Win32 related projects</a>
+<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU Win32 related projects</a>
 
 <hr>
 <h2><a name="os2">EGCS with OS/2</a></h2>
 <p>EGCS does not currently support OS/2.  However, Andrew Zabolotny has been
 working on a generic os/2 port with pgcc.  The current code code can be found
-at <a href="http://www.goof.com/pcg/os2">http://www.goof.com/pcg/os2</a>.
+at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.
 
 <hr>
 <h2><a name="X11R6">How do I compile X11 headers with g++</a></h2>
