--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -75,7 +75,7 @@ off of them.  Thanks to Marc Lehmann for mentioning this! Only the latest versio
 of the snapshots are mirrored here.
 
 <UL>
-<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead">Matthew C. Mead</A>!<BR>
+<LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead/">Matthew C. Mead</A>!<BR>
 <LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
 <!-- <LI><A HREF="ftp://ftp.lab.kdd.co.jp/agnu/pcg/egcs/">JAPAN: ftp.lab.kdd.co.jp (Saitama)</A>, thanks to <A HREF="mailto:hotta@lab.kdd.co.jp">Takao Hotta</A>!<BR> -->
@@ -85,7 +85,7 @@ of the snapshots are mirrored here.
 <LI><A HREF="ftp://ftp.u-aizu.ac.jp/pub/lang/C/pcg/egcs/">JAPAN: ftp.u-aizu.ac.jp (Aizu University)</A>, thanks to <A HREF="mailto:takafumi@u-aizu.ac.jp">Takafumi Hayashi</A>!<BR>
 <LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR> -->
-<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan">Olivier Tharan</A>!<BR>
+<LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan/">Olivier Tharan</A>!<BR>
 <!-- <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/pgcc/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR> -->
 </UL>
 
