--- a/htdocs/dse.html
+++ b/htdocs/dse.html
@@ -7,7 +7,7 @@
 
 <p>January 18, 1999
 
-<p>Christian Bruel and Jeff Law have contributed an significant improvement to
+<p>Christian Bruel and Jeff Law have contributed a significant improvement to
 the local dead store elimination performed by GCC.
 
 <p>Previously GCC would not detect a pair of memory stores (dead store
