Add "Closures for C++" plus some general page structure.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -8,12 +8,23 @@
 <body>
 <h1 align="center">egcs: Links and Selected Readings</h1>
 
-<p>Collected papers/sites on standards, compilers, optimization, etc.
+
+<h2>GCC specific literature</h2>
 
 <ul>
 
   <li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
   Dummies</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.
+
+  <li><a href="http://master.debian.org/~karlheg/Usenix88-lexic.pdf">Lexical
+  Closures for C++</a> by Thomas M. Breuel, on the design and
+  implementation of nested functions in GCC.
+
+</ul>
+
+<h2>Collected papers/sites on standards, compilers, optimization, etc.</h2>
+
+<ul>
 
   <li><a href="http://www.validgh.com/goldberg/paper.ps">What Every
   Computer Scientist Should Know about Floating-Point Arithmetic</a>
@@ -113,7 +124,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on January 19, 1999.</i>
+<i>Last modified on January 20, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 
