--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>egcs ftp mirror sites</title>
-<meta name="title" content="egcs ftp mirror sites">
+<title>egcs Links and Selected Readings</title>
+<meta name="title" content="egcs Links and Selected Reading">
 <meta name="keywords" content="egcs, compilers, optimization, documentation, FAQ, standards">
 </head>
 
