Add graph dumping announcement.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -67,6 +67,12 @@ A <a href="http://www.gcc.ml.org/testsuite/">database with test results</a>
 is now available online, thanks to Marc Lehmann.
 </dd>
 
+<dt><b>November 23, 1998</b></dt>
+<dd>
+<tt>egcs</tt> now can dump flow graph information usable for graphical
+representation.  Contributed by Ulrich Drepper.
+</dd>
+
 <dt><b>November 21, 1998</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
