Forgot to add anchor.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,8 +69,9 @@ is now available online, thanks to Marc Lehmann.
 
 <dt><b>November 23, 1998</b></dt>
 <dd>
-<tt>egcs</tt> now can dump flow graph information usable for graphical
-representation.  Contributed by Ulrich Drepper.
+<tt>egcs</tt> now can dump flow graph information usable for
+<a href="egcs-vcg.html">graphical representation</a>.
+Contributed by Ulrich Drepper.
 </dd>
 
 <dt><b>November 21, 1998</b></dt>
