Change reference to fixed vcg tarball now that it is on egcs.

--- a/htdocs/egcs-vcg.html
+++ b/htdocs/egcs-vcg.html
@@ -186,7 +186,7 @@ test.c.cse.vcg        test.c.greg.vcg  test.c.lreg.vcg   test.c.stack.vcg</pre>
     href="ftp://ftp.cs.uni-sb.de/pub/graphics/vcg/vcg.1.30.r3.17.tgz">here</a>.
     The problem with this version is that it has a few little bugs.  A
     corrected version is available from <a
-    href="ftp://ftp.cygnus.com/pub/home/drepper/vcg.1.30.r3.17-cygnus.tgz">Cygnus</a>.</p>
+    href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/vcg.1.30.r3.17-cygnus.tgz">Cygnus</a>.</p>
 
     <p>Oh, did we mention that you have to run a Unix with X Windows?
     Go away, Windows Weenies!</p>
