Add ppc750 to the news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -38,8 +38,17 @@ href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 
 <dl>
 
+<dt><b>January 21, 1999</b></dt>
+<dd> 
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
+750 processor.  The PPC750 is a 32bit superscalar implementation of the
+PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targetted
+at high end Macs as well as high end embedded applications.
+</dd>
+
 <dt><b>January 18, 1999</b></dt>
-<dd> Christian Bruel and Jeff Law donate improved 
+<dd>
+Christian Bruel and Jeff Law donate improved 
 <a href="dse.html">local dead store elimination.</a>
 </dd>
 
@@ -137,7 +146,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on January 15, 1999.</i>
+<i>Last modified on January 21, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
