New section "Chip Documentation". Add "Alpha OEM Documentation Library".

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -22,6 +22,19 @@
 
 </ul>
 
+
+<h2>Chip Documentation</h2>
+
+<ul>
+
+  <li>The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
+  OEM Documentation Library</a> offers the Alpha Architecture
+  Handbook, chip hardware manuals, and info on associated core logic
+  chipsets.
+
+</ul>
+
+
 <h2>Collected papers/sites on standards, compilers, optimization, etc.</h2>
 
 <ul>
