Move platform specific installation instructions from the FAQ to the installation notes. By Bret McGuire <mersault@busboy.sped.ukans.edu>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -573,18 +573,10 @@ gcc, unless marked <tt>volatile</tt> as above.
 
 <hr>
 <h2><a name="hpcompare">Bootstrap comparison failures on HPs</a></h2>
-<p>If you bootstrap the compiler on hpux10 using the HP assembler instead of
-gas, every file will fail the comparison test.
-
-<p>The HP assembler inserts timestamps into object files it creates, causing
-every file to be different.  The location of the timestamp varies for each
-object file, so there's no real way to work around this mis-feature.
-
-<p>Odds are your compiler is fine, but there's no way to be certain.
-
-<p>If you use GAS on HPs, then you will not run into this problem because
-GAS never inserts timestamps into object files.  For this and various other
-reasons we highly recommend using GAS on HPs.
+<p>If you bootstrap the compiler on HP-UX 10.x using the HP assembler instead 
+of gas, every file will fail the comparison test.  Please see the section on 
+HP-UX 10.x in the <a href = "install/specific.html">Host/Target specific 
+installation notes</a> for more information
 
 <hr>
 <h2><a name="makebugs">Bootstrap loops rebuilding cc1 over and over</a></h2>
@@ -783,23 +775,9 @@ http://reality.sgi.com/ariel/freeware</a>
 
 <hr>
 <h2><a name="next">Problems with EGCS on NEXTSTEP 3.x systems</a></h2>
-<p>On NEXTSTEP 3.x where x &lt; 3 the build of egcs will abort during  
-stage1 with an error message like this:
-
-<pre>
-_eh
-/usr/tmp/ccbbsZ0U.s:987:Unknown pseudo-op: .section
-/usr/tmp/ccbbsZ0U.s:987:Rest of line ignored. 1st junk character  
-valued 95 (_).
-</pre>
-
-<p>The reason for this is the fact that NeXT's assembler for these  
-versions of the operating system does not support the .section  
-pseudo op that's needed for full C++ exception functionality.
-
-As NeXT's assembler is a derived work from GNU as, a free  
-replacement that does can be obtained at 
-<a href="ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz">ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz</a>.
+<p>On some versions of NEXTSTEP 3.x, compilation of EGCS will fail during
+stage1.  More information can be found in the section on NEXTSTEP 3.x in the 
+<a href = "install/specific.html">Host/Target specific installation notes</a>.
 
 
 <hr>
