USe PNG instead of GIF.

--- a/htdocs/egcs-vcg.html
+++ b/htdocs/egcs-vcg.html
@@ -169,7 +169,7 @@ test.c.cse.vcg        test.c.greg.vcg  test.c.lreg.vcg   test.c.stack.vcg</pre>
 
     <p>These are nodes representing all the functions in the file.  If
     you read the <em>VCG</em> manual and find out how to expand the
-    nodes you can get a picture like <a href="vcg2.gif">this</a>.  If
+    nodes you can get a picture like <a href="vcg2.png">this</a>.  If
     you need more details you can unfold the basic block nodes as
     well.  There are some more tricks the program can do, it's worth
     reading the manual.</p>
