--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -72,7 +72,7 @@ HP aCC symbols.
 
 <dt><b>November 26, 1998</b></dt>
 <dd>
-A <a href="http://www.gcc.ml.org/testsuite/">database with test results</a>
+A <a href="/testsuite/">database with test results</a>
 is now available online, thanks to Marc Lehmann.
 </dd>
 
@@ -146,7 +146,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on January 21, 1999.</i>
+<i>Last modified on January 25, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
