--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -72,7 +72,7 @@ HP aCC symbols.
 
 <dt><b>November 26, 1998</b></dt>
 <dd>
-A <a href="/testsuite/">database with test results</a>
+A <a href="/testresults/">database with test results</a>
 is now available online, thanks to Marc Lehmann.
 </dd>
 
