Add structure by moving relevant entries into section "Chip Documentation".

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -32,6 +32,50 @@
   Handbook, chip hardware manuals, and info on associated core logic
   chipsets.
 
+<p>
+
+  <li><a href="http://developer.intel.com/design/litcentr/index.htm">Intel
+  Pentium design info</a>
+
+  <li>Some information about optimizing for x86 processors, links to
+  x86 manuals and documentation:
+
+  <ul>
+    <li><a href="http://www.goof.com/pcg/docs.html">http://www.goof.com/pcg/docs.html</a>
+    <li><a href="http://www.agner.org">http://www.agner.org</a>
+  </ul>
+
+  <li><a href="http://www.amd.com/K6/k6docs/pdf/21828a.pdf">AMD site
+  with optimization guide for x86</a>
+
+<p>
+
+  <li><a href="http://www.hp.com/computing/framed/technology/micropro">HPPA
+  information</a>
+
+<p>
+
+  <li><a href="http://www.mot.com/SPS/HPESD/prod/0X0">Various m68k
+  info</a> (including user guides in pdf format)
+	
+<p>
+
+  <li>Various MIPS stuff:
+  <ul>
+    <li><a href="http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf">
+	http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf</a>
+    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf">
+	http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf</a>
+    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf">
+	http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf</a>
+    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf">
+	http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf</a>
+    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf">
+	http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf</a>
+    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf">
+	http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf</a>
+  </ul>
+
 </ul>
 
 
@@ -56,36 +100,6 @@
   <li><a href="http://www.partner.europe.digital.com/www-swdev/pages/Home/TECH/dunix/ofst/build/src/index.html">
   Information on the Digital UNIX V5.0 object file format</a>
 
-  <li><a href="http://www.hp.com/computing/framed/technology/micropro">HPPA information</a>
-
-  <li><a href="http://www.mot.com/SPS/HPESD/prod/0X0">Various m68k info (including user guides in pdf format)</a>
-
-  <li><a href="http://developer.intel.com/design/litcentr/index.htm">Intel Pentium design info</a>
-
-  <li>Some information about optimizing for x86 processors, links to x86 manuals and documentation:
-  <ul>
-    <li><a href="http://www.goof.com/pcg/docs.html">http://www.goof.com/pcg/docs.html</a>
-    <li><a href="http://www.agner.org">http://www.agner.org</a>
-  </ul>
-
-  <li><a href="http://www.amd.com/K6/k6docs/pdf/21828a.pdf">AMD site with optimization guide for x86</a>
-
-  <li>Various MIPS stuff:
-  <ul>
-    <li><a href="http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf">
-				http://www.sgi.com/MIPS/arch/mips4docs/mipsiv_3_2.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf">
-				http://www.sgi.com/MIPS/arch/MIPS16/MIPS16.whitepaper.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf">
-				http://www.sgi.com/MIPS/arch/MIPS16/mips16.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf">
-				http://www.sgi.com/MIPS/arch/ISA5/isa5_tech_brf.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf">
-				http://www.sgi.com/MIPS/arch/ISA5/MDMXspec.pdf</a>
-    <li><a href="http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf">
-				http://www.sgi.com/MIPS/arch/ISA5/MIPSVspec.pdf</a>
-  </ul>
-	
 <p>
 
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a>
@@ -137,7 +151,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on January 20, 1999.</i>
+<i>Last modified on January 27, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 
