Add the test and benchmark suite result pages prominently.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,10 +25,12 @@ code continues to be <a href="contribute.html">assigned to the FSF</a>
 exactly as before and is available to the gcc2 maintainers for
 ultimate inclusion into the gcc2 tree.
 
-<p>We will provide regular, high quality <a
-href="#releases">releases</a>. We want those releases to work well on
-a variety of native (including linux) and cross targets.  <a
-href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
+<p>We will provide regular, high quality <a href="#releases">releases</a>.
+We want those releases to work well on a variety of native (including linux)
+and cross targets and  and use an extensive <a href="testresults/">test
+suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
+maintain and improve quality.
+<a href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
