Remove duplicate duplicate.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,7 +27,7 @@ ultimate inclusion into the gcc2 tree.
 
 <p>We will provide regular, high quality <a href="#releases">releases</a>.
 We want those releases to work well on a variety of native (including linux)
-and cross targets and  and use an extensive <a href="testresults/">test
+and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
 <a href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
