Add link to cvswrite.html.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -18,12 +18,13 @@ the <a href="mission.html"> egcs mission statement </a>.
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in egcs. We make regular <a
 href="#snapshots">snapshots</a> publicly available. We provide <a
-href="cvs.html"> readonly access via remote-CVS </a> to anyone on the
-net, and read-write access to certain external developers in the
-manner already used in other Free Software projects on the net.  All
-code continues to be <a href="contribute.html">assigned to the FSF</a>
-exactly as before and is available to the gcc2 maintainers for
-ultimate inclusion into the gcc2 tree.
+href="cvs.html">readonly access via remote-CVS</a> to anyone on the
+net, and <a href="cvswrite.html">read-write access</a> to certain
+external developers in the manner already used in other Free Software
+projects on the net.  All code continues to be <a
+href="contribute.html">assigned to the FSF</a> exactly as before and
+is available to the gcc2 maintainers for ultimate inclusion into the
+gcc2 tree.
 
 <p>We will provide regular, high quality <a href="#releases">releases</a>.
 We want those releases to work well on a variety of native (including linux)
@@ -148,7 +149,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on January 25, 1999.</i>
+<i>Last modified on January 29, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
