--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -24,6 +24,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
 <li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
+<li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
@@ -99,7 +100,7 @@ where the mirror is located.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on December 13, 1998.</i>
+<i>Last modified on January 28, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
