Explicitly mention where to find the most current version of this FAQ.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -6,6 +6,9 @@
 
 <h1 align="center">EGCS Frequently Asked Questions</h1>
 
+The latest version of this document is always available at <a href="
+http://egcs.cygnus.com/faq.html">http://egcs.cygnus.com/faq.html</a>.
+
 <p>This FAQ tries to answer specific questions concerning EGCS. For
 general information regarding C resp. C++, please check the 
 <a href="http://www.eskimo.com/~scs/C-faq/top.html">comp.lang.c FAQ</a>,
@@ -982,6 +985,8 @@ touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
 you may also need to obtain development versions of some GNU tools, as
 the production versions do not necessarily handle all features needed
 to rebuild egcs.</p>
+
+egcs_update
 
 <p>Autoconf is available from
 <a href="http://sourceware.cygnus.com/autoconf/">
