Mention the egcs_update script and remove the duplicate description of what it does.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -966,27 +966,15 @@ bison, and xgettext.
 correct.  This causes problems for generated files as "make" may think
 those generated files are out of date and try to regenerate them.
 
-<pre>
-touch `find egcs -name configure -print`
-touch `find egcs/texinfo -name Makefile.in -print`
-touch `find egcs/texinfo -name \*.pot -print`
-touch `find egcs/texinfo -name \*.gmo -print`
-touch egcs/gcc/{c-parse.y,cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
-touch egcs/gcc/cp/parse.{c,h}
-touch egcs/gcc/java/{parse.c,parse.h,parse-scan.c}
-touch egcs/gcc/objc/objc-parse.{c,y}
-touch egcs/libf2c/libU77/config.hin
-touch egcs/libf2c/libU77/stamp-h.in
-touch egcs/contrib/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
-touch egcs/gcc/fixinc/{fixincl.x,inclhack.sh,fixincl.sh}
-</pre>
+<p>An easy way to work around this problem is to use the egcs_update
+script in the contrib subdirectory of egcs, which handles this
+transparently without requiring installation of any additional tools.</p>
+
 
 <p>When building from diffs or CVS or if you modified some sources,
 you may also need to obtain development versions of some GNU tools, as
 the production versions do not necessarily handle all features needed
 to rebuild egcs.</p>
-
-egcs_update
 
 <p>Autoconf is available from
 <a href="http://sourceware.cygnus.com/autoconf/">
